# vt_traces

./: .dockerignore  Cargo.toml  Dockerfile  README.md  findings.md  progress.md  rust-toolchain.toml  task_plan.md
.github/workflows/: harness-qa.yml  linux-release.yml
crates/vtapi/: Cargo.toml
crates/vtapi/src/: app.rs  cluster.rs  http_client.rs  lib.rs  main.rs  server.rs
crates/vtapi/tests/: http_api_tests.rs
crates/vtbench/: Cargo.toml
crates/vtbench/src/: compare.rs  main.rs  official_compare.rs  official_query_compare.rs  preflight.rs  replay.rs  report.rs
crates/vtbench/tests/: compare_tests.rs  fault_recovery_tests.rs  guardrail_tests.rs  harness_end_to_end_tests.rs  replay_bundle_tests.rs  report_schema_tests.rs
crates/vtbench/tests/common/: mod.rs
crates/vtcore/: Cargo.toml
crates/vtcore/src/: codec.rs  lib.rs  model.rs
crates/vtcore/tests/: codec_tests.rs  model_tests.rs
crates/vtingest/: Cargo.toml
crates/vtingest/src/: flatten.rs  lib.rs  logs.rs  logs_proto.rs  proto.rs
crates/vtingest/tests/: flatten_tests.rs  protobuf_tests.rs
crates/vtquery/: Cargo.toml
crates/vtquery/src/: lib.rs  service.rs
crates/vtquery/tests/: query_service_tests.rs
crates/vtstorage/: Cargo.toml
crates/vtstorage/src/: batching.rs  bloom.rs  disk.rs  engine.rs  lib.rs  log_state.rs  memory.rs  state.rs
crates/vtstorage/tests/: batching_engine_tests.rs  disk_engine_tests.rs  memory_engine_tests.rs
docs/: 2026-04-06-otlp-ingest-performance-report.md  architecture.md  production-release-guide.md
docs/benchmarks/: README.md  incident-template.md  incident-to-eval.md  noise-model.md  qa-system-overview.md  regression-template.md  transcript-review-template.md
docs/benchmarks/baselines/: disk-otlp-protobuf-load-arm64-fresh-5round-median.json  disk-otlp-protobuf-load-arm64-fresh-5round-round1.json  disk-otlp-protobuf-load-arm64-fresh-5round-round1.metrics  disk-otlp-protobuf-load-arm64-fresh-5round-round2.json  disk-otlp-protobuf-load-arm64-fresh-5round-round2.metrics  disk-otlp-protobuf-load-arm64-fresh-5round-round3.json  disk-otlp-protobuf-load-arm64-fresh-5round-round3.metrics  disk-otlp-protobuf-load-arm64-fresh-5round-round4.json  disk-otlp-protobuf-load-arm64-fresh-5round-round4.metrics  (+4 more)
docs/handoffs/: 2026-04-08-rust-vt-design-capability-package.md  HANDOFF-2026-04-05-rust-vt-performance-thread2.md  HANDOFF-2026-04-05-rust-vt-performance.md  HANDOFF-2026-04-06-rust-vt-head-segment-leap.md  HANDOFF-2026-04-06-rust-vt-performance-thread3.md  HANDOFF-2026-04-07-rust-vt-stable-throughput-query-gate.md  HANDOFF-2026-04-08-rust-vt-throughput-runtime-fix.md
docs/plans/: 2026-04-05-performance-extreme-plan.md  2026-04-06-disk-vs-official-recovery-plan.md  2026-04-06-formal-release-gate.md  2026-04-06-harness-qa-plan.md  2026-04-06-trace-microbatch-design.md  2026-04-07-big-leap-performance-plan.md  2026-04-07-big-leap-profiling-revised.md  2026-04-07-disk-next-hotspots-plan.md  2026-04-08-ha-recovery-consistency-detailed-design.md  2026-04-08-index-detailed-design.md  2026-04-08-ingest-and-persistence-detailed-design.md  2026-04-08-official-benchmark-harness.md  2026-04-08-persisted-recovery-index-design.md  2026-04-08-query-execution-detailed-design.md  2026-04-08-recovery-index-v2-design.md  2026-04-08-victoriatraces-design-realignment.md  2026-04-09-official-query-benchmark-harness.md  2026-04-09-storage-cost-model-framework.md
docs/runbooks/: 2026-04-08-throughput-canary-runbook.md
ops/env/: common.env.example  insert.env.example  select.env.example  storage-a.env.example  storage-b.env.example
ops/systemd/: rust-victoria-trace-insert.service  rust-victoria-trace-select.service  rust-victoria-trace-storage@.service
scripts/production/: package-linux-x86_64.sh  rollback-canary.sh  rollout-canary.sh  run-role.sh  smoke-canary.sh
(+3 files in other folders)
