[workspace]
members = [
    "crates/vtapi",
    "crates/vtbench",
    "crates/vtcore",
    "crates/vtingest",
    "crates/vtquery",
    "crates/vtstorage",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
crc32fast = "1.4"
hyper-util = { version = "0.1.20", features = ["server", "service", "http1", "http2", "tokio"] }
parking_lot = "0.12"
prost = "0.12.6"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
roaring = "0.10"
rustc-hash = "1.1"
rustls = "0.21.12"
rustls-pemfile = "1.0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
smallvec = "1.13"
thiserror = "1.0"
time = "=0.3.36"
tokio = { version = "1.37", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.24.1"
tower = { version = "0.5", features = ["limit", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mimalloc = { version = "0.1.43", default-features = false }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
debug = 1
# strip = "debuginfo"  # temporarily disabled for profiling
