[package]
name = "vtbench"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
reqwest.workspace = true
rustc-hash.workspace = true
serde_json.workspace = true
tokio.workspace = true
vtapi = { path = "../vtapi" }
vtcore = { path = "../vtcore" }
vtingest = { path = "../vtingest" }
vtstorage = { path = "../vtstorage" }
