[package]
name = "vtstorage"
version.workspace = true
edition.workspace = true

[dependencies]
crc32fast.workspace = true
libc.workspace = true
parking_lot.workspace = true
roaring.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
vtcore = { path = "../vtcore" }
zstd.workspace = true
